--- a/_data/home.yml
+++ b/_data/home.yml
@@ -1,7 +1,7 @@
 main:
-  - title: "Sheikh Zayed Road _ E11<br>Tire fragments "
-    url: /tire-fragments/
-    img: /assets/img/home/tire.jpg
+  - title: "Sheikh Zayed Road _ E11<br>Tyre fragments "
+    url: /tyre-fragments/
+    img: /assets/img/home/tyre.jpg
   - title: "A piece of chalk"
     url: /a-piece-of-chalk/
     img: /assets/img/home/chalk.jpg
